--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,6 @@
+2025-14-11 / Build 798 - awa-22-22 (alexanderwanner@web.de)
+	* fixed persistence of wahrerTyp - race id instead of race name - in CR files writer
+
 2025-06-02 / trickert (thoralf@m84.de)
     * fixed a NPE within preferences dialog
     * removed nightly build informations (only stable is available) #50
